2004-11-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Reduced NameTable.Add() for prefixed names. First,
	  ReadName() now returns atomized LocalName and Prefix. Second, to
	  avoid extraneous split, SetProperties() now takes prefix and
	  localName that might be given from ReadName(). Third, removed 
	  FillNames(). This optimizes "namespace-aware and prefixed document"
	  parsing 10-20% faster.

2004-11-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs :
	  With related to AddNamespace(), there was extra string.StartsWith()
	  calls. Now AttributeTokenInfo.FillNames() is splitted into
	  FillPrefixAndXmlns() and FillNamespace(), and AddNamespace() is done
	  at FillPrefixAndXmlns().

2004-11-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs :
	  Reduces LookupNamespace() call in FillNames(). This improves 6-7%
	  speedup in some scenario.
	  Code refactory; Removed unused code. AddAttribute() is used only for
	  DTD, so renamed to AddDtdAttribute(). For PUBLIC and SYSTEM ids,
	  FillNames() is not required. Two SetProperties() are ambiguous, so
	  renamed one (that takes TokenInfo) as SetTokenProperties().

2004-11-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlParserContext.cs : rewrote; especially to avoid XmlSpace boxing.

2004-11-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : LookupNamespace() don't have to be called in
	  ReadStartTag() to check prefix, since NamespaceURI is filled in
	  FillNames(). 10% performance up by avoiding this extra check.

2004-10-29  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReader.cs : fixed incorrect recursion between
	  indexer and GetAttribute().

2004-10-29  Atsushi Enomoto <atsushi@ximian.com>

	* DTDReader.cs, DTDValidatingReader.cs, XmlTextReader.cs :
	  When XmlTextReader is created with NodeType Element or Attribute,
	  skip possible text declaration (that might be used for resolving